fix bug: playerUpdate not registering